--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,30 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": ".NET Core Launch (web)",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build api",
+           "program": "${workspaceFolder}/Presentation/Usuarios.Presentation.Api/bin/Debug/netcoreapp3.1/Usuarios.Presentation.Api.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/Presentation/Usuarios.Presentation.Api",
+           "console": "internalConsole",
+           "stopAtEntry": false,
+           "serverReadyAction": {
+               "action": "openExternally",
+               "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {}
+       },
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "build test",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/Presentation/Usuarios.Presentation.Tests/bin/Debug/netcoreapp3.1/Usuarios.Presentation.Tests.dll",
             "args": [],
