--- a/Infrastructure/Usuarios.Infrastructure.Redis/Usuarios.Infrastructure.Redis.csproj
+++ b/Infrastructure/Usuarios.Infrastructure.Redis/Usuarios.Infrastructure.Redis.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.1.7" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
