--- a/Presentation/Usuarios.Presentation.Api/appsettings.json
+++ b/Presentation/Usuarios.Presentation.Api/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "UsuariosDb": "Server=sqlserver;Database=UsuariosDb;User Id=sa;Password=yourStrong(!)Password;",
+    "Redis": "redis:6379,DefaultDatabase=1,abortConnect=false"
+  },
+  "Redis": {
+    "ExpirationMinutes": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
