--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     sqlserver:
         image: mcr.microsoft.com/mssql/server:2017-latest
         environment:
-            ACCEPT_EULA: Y
+            ACCEPT_EULA: 'Y'
             SA_PASSWORD: yourStrong(!)Password
         ports:
             - "1433:1433"
