Adicionado o postgres sql

--- a/Presentation/Usuarios.Presentation.Api/appsettings.Development.json
+++ b/Presentation/Usuarios.Presentation.Api/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "UsuariosDb": "Server=localhost;Database=UsuariosDb;User Id=sa;Password=yourStrong(!)Password;",
+    "SqlServer_UsuariosDb": "Server=localhost;Database=UsuariosDb;User Id=sa;Password=yourStrong(!)Password;",
+    "Postgres_UsuariosDb": "Server=192.168.99.100;Database=UsuariosDb;Port=30432;User Id=postgres;Password=mysecretpassword;",
     "Redis": "localhost:6379,DefaultDatabase=1,abortConnect=false"
   },
   "Redis": {
