--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,17 @@
     },
     "[json]": {
         "editor.tabSize": 2
-    }
+    },
+    "sqltools.connections": [
+        {
+            "previewLimit": 50,
+            "server": "192.168.99.100",
+            "port": 30432,
+            "driver": "PostgreSQL",
+            "name": "Kubernetes",
+            "database": "UsuariosDb",
+            "username": "postgres",
+            "password": "mysecretpassword"
+        }
+    ]
 }
