--- a/k8s/postgres.config.yml
+++ b/k8s/postgres.config.yml
@@ -18,7 +18,7 @@ spec:
               claimName: database-persistent-volume-claim
       containers:
       - name: postgres
-        image: postgres
+        image: postgres:12
         resources:
           limits:
             memory: "500Mi"
