--- a/k8s/redis.config.yml
+++ b/k8s/redis.config.yml
@@ -20,16 +20,28 @@ spec:
             cpu: "100m"
         ports:
         - containerPort: 6379
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: redis-cluster-ip-service
+# spec:
+#   type: ClusterIP
+#   selector:
+#     name: redis
+#   ports:
+#   - port: 6379
+#     targetPort: 6379
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-cluster-ip-service
+  name: redis-node-port-service
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
-    clusterip: redis-cluster-ip-service
+    cache: redis
   ports:
   - port: 6379
     targetPort: 6379
----
+    nodePort: 30379
