--- a/Infrastructure/Usuarios.Infrastructure.PostgresSql/Usuarios.Infrastructure.PostgresSql.csproj
+++ b/Infrastructure/Usuarios.Infrastructure.PostgresSql/Usuarios.Infrastructure.PostgresSql.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Domain\Usuarios.Domain\Usuarios.Domain.csproj" />
+    <ProjectReference Include="..\Usuarios.Infrastructure.EfCore\Usuarios.Infrastructure.EfCore.csproj" />
   </ItemGroup>
 
 </Project>
