--- a/k8s/sqlserver.config.yml
+++ b/k8s/sqlserver.config.yml
@@ -1,62 +1,62 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: sqlserver
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      database: sqlserver
-  template:
-    metadata:
-      labels:
-        database: sqlserver
-    spec:
-      volumes:
-        - name: sqlserver-storage
-          persistentVolumeClaim:
-              claimName: database-persistent-volume-claim
-      containers:
-      - name: sqlserver
-        image: mcr.microsoft.com/mssql/server:2019-CU3-ubuntu-18.04
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
-        ports:
-        - containerPort: 1433
-        env:
-          - name: 'ACCEPT_EULA'
-            value: 'Y'
-          - name: SA_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: sqlserver-secret
-                key: SA_PASSWORD                  
-        volumeMounts:
-          - name: sqlserver-storage
-            mountPath: /var/opt/mssql
-            subPath: sqlserver
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: sqlserver-cluster-ip-service
-spec:
-  type: ClusterIP
-  selector:
-    clusterip: sqlserver-cluster-ip-service
-  ports:
-  - port: 1433
-    targetPort: 1433
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: sqlserver
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       database: sqlserver
+#   template:
+#     metadata:
+#       labels:
+#         database: sqlserver
+#     spec:
+#       volumes:
+#         - name: sqlserver-storage
+#           persistentVolumeClaim:
+#               claimName: database-persistent-volume-claim
+#       containers:
+#       - name: sqlserver
+#         image: mcr.microsoft.com/mssql/server:2019-CU3-ubuntu-18.04
+#         resources:
+#           limits:
+#             memory: "128Mi"
+#             cpu: "100m"
+#         ports:
+#         - containerPort: 1433
+#         env:
+#           - name: 'ACCEPT_EULA'
+#             value: 'Y'
+#           - name: SA_PASSWORD
+#             valueFrom:
+#               secretKeyRef:
+#                 name: sqlserver-secret
+#                 key: SA_PASSWORD                  
+#         volumeMounts:
+#           - name: sqlserver-storage
+#             mountPath: /var/opt/mssql
+#             subPath: sqlserver
 # ---
 # apiVersion: v1
 # kind: Service
 # metadata:
-#   name: sqlserver-nodeport-service
+#   name: sqlserver-cluster-ip-service
 # spec:
+#   type: ClusterIP
 #   selector:
-#     nodeport: sqlserver-nodeport-service
+#     clusterip: sqlserver-cluster-ip-service
 #   ports:
 #   - port: 1433
 #     targetPort: 1433
+# # ---
+# # apiVersion: v1
+# # kind: Service
+# # metadata:
+# #   name: sqlserver-nodeport-service
+# # spec:
+# #   selector:
+# #     nodeport: sqlserver-nodeport-service
+# #   ports:
+# #   - port: 1433
+# #     targetPort: 1433
